# oxid

./: Cargo.toml  README.md
oxid/: Cargo.toml
oxid-lsp/: Cargo.toml
oxid-lsp/src/: capabilities.rs  client.rs  lib.rs  types.rs
oxid-test/: Cargo.toml
oxid/src/: app.rs  buffer.rs  cli.rs  command.rs  config.rs  events.rs  lib.rs  main.rs  ui.rs
oxid/src/app/: blinking.rs  commands.rs  events.rs  lsp.rs  modes.rs
oxid/src/buffer/: core.rs  editing.rs  movement.rs  rendering.rs  types.rs  visual.rs
oxid/src/ui/: command.rs  completion.rs  debug.rs  diagnostics.rs  editor_view.rs  hover.rs
oxid/tests/: init.rs
oxid/tests/data/: exceptions.py
src/: app.rs  buffer.rs  cli.rs  events.rs  main.rs  ui.rs
src/buffer/: core.rs  editing.rs  movement.rs  rendering.rs  types.rs  visual.rs
src/ui/: editor_view.rs
testfiles/: exceptions.py
